--- a/index.html
+++ b/index.html
@@ -12,13 +12,27 @@
     <form id="create-task-form" action="#" method="post">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <input type="text" id="duration" name="duration" placeholder="duration">
+
+      <label for="highlight">Priority:</label>
+      <select name="cars" id="highlight">
+        <option value="1">Low</option>
+        <option value="2">Medium</option>
+        <option value="3">High</option>
+      </select>
       <input type="submit" value="Create New Task">
     </form>
 
     <div id="list">
       <h2>My Todos</h2>
       <ul id="tasks">
+
       </ul>
+      <button type="button" id="delete-button">Delete</button>
+      <button type="button" id="sort-button">Sort</button>
+
+
+
     </div>
 
     <script src="./src/index.js"></script>
